# AWSLambdaConnectivityChecker

./: README.md
lambda-connectivity-checker/: README.md  publish.sh  pyproject.toml
lambda-connectivity-checker/lambda_connectivity_checker/: handler.py
